--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
 
     <div class="container mt-5">
         <h1>About Us</h1>
-        <p style="font-size: large; font-weight: 500;">This website is built for efficient online food ordering and delivery services for users. Order and Pay through online methods and have your food delivered to your doorstep within minutes!</p>
+        <p style="font-size: large; font-weight: 500;">This website is built for efficient online food ordering and delivery services for users. Order online and have your food delivered to your doorstep within minutes!</p>
         <p style="font-weight: 500; font-size: x-large;">We offer:</p>
         <ul>
             <h2 style="font-weight: 600; text-align: center;">Fast Foods</h2>
